# AlphaLab

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
alphalab/: __init__.py
alphalab/allocation/: __init__.py  allocator.py  budget.py  constraints.py  engine.py  events.py  exceptions.py  netting.py  optimizer.py  request.py  sizing.py  state.py  validation.py  views.py
alphalab/analytics/: __init__.py  attribution.py  drawdown.py  engine.py  events.py  exceptions.py  exposure.py  metrics.py  report.py  returns.py  rolling.py  state.py  summary.py  validation.py  views.py
alphalab/broker/: __init__.py  account.py  adapter.py  broker.py  events.py  exceptions.py  execution.py  order.py  paper.py  position.py  protocol.py  state.py  validation.py  views.py
alphalab/core/: __init__.py  enums.py  event.py  exceptions.py  fill.py  ids.py  order.py  portfolio.py  position.py  signal.py  trade.py
alphalab/execution/: __init__.py  commission.py  engine.py  events.py  exceptions.py  fill.py  latency.py  report.py  simulator.py  slippage.py  state.py  validation.py  views.py
alphalab/kernel/: __init__.py  diff.py  reducer.py  selectors.py  snapshot.py  state.py  store.py  version.py
alphalab/market/: __init__.py  bar.py  book.py  engine.py  events.py  exceptions.py  level.py  quote.py  snapshot.py  state.py  (+4 more)
benchmarks/: benchmark_allocation_engine.py  benchmark_analytics_engine.py  benchmark_broker.py  benchmark_event_pipeline.py  benchmark_oms.py  benchmark_portfolio_engine.py  benchmark_replay_engine.py  benchmark_risk_engine.py  benchmark_schedular_engine.py  benchmark_strategy_runtime.py  benchmarks_execution.py  benchmarks_market_engine.py
docs/: ARCHITECTURE.md  ENGINEERING_GUIDELINES.md  EVENT_MODEL.md  README.md  ROADMAP.md  STATE_MODEL.md  SYSTEM_DESIGN.md  VISION.md
(+124 files in other folders)
