[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "alphalab"
version = "0.1.0"
description = "A Python foundation for systematic research, analytics, and execution tooling."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "AlphaLab contributors" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "hatchling>=1.26",
  "mypy>=1.16",
  "pre-commit>=4.2",
  "pytest>=8.4",
  "pytest-cov>=6.2",
  "ruff>=0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["alphalab"]

[tool.hatch.build.targets.sdist]
include = [
  "/alphalab",
  "/benchmarks",
  "/configs",
  "/docs",
  "/examples",
  "/tests",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "PYI",
  "RUF",
  "SIM",
  "UP",
]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
files = [
  "alphalab",
  "tests",
]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "-ra",
]
pythonpath = [
  ".",
]
testpaths = [
  "tests",
]
